syntax = "proto3";

package wallet;

option go_package = "/wallet";
service WalletService {
  rpc SayHello (HelloRequest) returns (HelloResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}
